Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16889

Regedit : Inconsistent menu state for "Permissions"

    XMLWordPrintable

Details

    Description

      Regedit : Inconsistent menu state for "Permissions"

      reactos-bootcd-0.4.14-dev-1455-g963d39b-x86-gcc-lin-dbg

      • Open regedit
      • Select HKCR
      • Right click > Permission is greyed and disabled BUT Edit > Permissions menu item remains enabled.

       

      Attachments

        Activity

          People

            ekohl ekohl
            Kyle_Katarn Kyle_Katarn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: