[REGEIT] Fix inconsistent menu state for 'Permissions'

- Disable the 'Permissions' item in the main menu, when 'My Computer' is selected.
- Enable the 'Permissions' item in the tree view context menu.

CORE-16889